// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`a.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @providesModule IncrModuleA */

=====================================output=====================================
/* @providesModule IncrModuleA */

================================================================================
`;

exports[`b.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @providesModule IncrModuleB
   @flow
*/

var A = require('IncrModuleA');

=====================================output=====================================
/* @providesModule IncrModuleB
   @flow
*/

var A = require("IncrModuleA");

================================================================================
`;

exports[`dup_a.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @providesModule IncrModuleA */

var x:string = 0;

=====================================output=====================================
/* @providesModule IncrModuleA */

var x: string = 0;

================================================================================
`;
